# poetiq-arc-agi-solver

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt
arc_agi/: config.py  io.py  llm.py  official_parsing.py  official_schemas.py  official_scorer.py  prompts.py  sandbox.py  scoring.py  solve.py  solve_coding.py  solve_parallel_coding.py  types.py  utils.py  vote.py
